# cpp-qt-postgresql-template

./: .env.example  .gitignore  CMakeLists.txt  README.md
config/: env.cpp  env.h
database/: db.cpp  db.h
gui/: mainwindow.cpp  mainwindow.h
models/: user.h
repositories/: userrepository.cpp  userrepository.h
services/: userservice.cpp  userservice.h
src/: main.cpp
